@@ -1,4 +1,8 @@
-$Id: ChangeLog 4191 2015-12-18 11:26:27Z samm2 $
+$Id: ChangeLog 4192 2015-12-19 13:59:40Z chrfranke $
+
+2015-12-19  Christian Franke  <franke@computer.org>
+
+	Makefile.am: Fix path of 'smart-pkg-uninstall' (Regression from r4190).
 
 2015-12-18  Alex Samorukov <samm@os2.kiev.ua>
 
